@@ -31,6 +31,8 @@ dillo-fltk2
  - Rewrote the DNS API and the Dpid start code inside Dillo.
  - Implemented Stop button to not only stop rendering but also networking.
  - Fixed the problem of scrolling position (remember position in a page).
+ - Implemented a new scheme of scroll-position remembering. This is one per
+   visited page intead of one per url (this is more standard).
    Patches: Jorge Arellano
 +- Connected signals to <li> elements (fixes links within lists).
  - Enabled text, background-color and geometry in preferences.
